force-app/main/default/objects/Area__c/Area__c.object-meta.xml
<CustomObject>
    <label>Area</label>
    <nameField>
        <label>Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>