force-app/main/default/objects/Area__c/fields/DaysOfWeek__c.field-meta.xml
<CustomField>
    <fullName>DaysOfWeek__c</fullName>
    <inlineHelpText>Not checking any means the user will be called to schedule.</inlineHelpText>
    <label>Days of Week</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DaysOfWeek</valueSetName>
    </valueSet>
</CustomField>