force-app/main/default/objects/Area__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery</label>
    <type>Checkbox</type>
</CustomField>