force-app/main/default/objects/Area__c/fields/MinimumItems__c.field-meta.xml
<CustomField>
    <fullName>MinimumItems__c</fullName>
    <defaultValue>(&quot;0&quot;)</defaultValue>
    <inlineHelpText>(Pickup only)</inlineHelpText>
    <label>Minimum Items</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>(none)</label>
            </value>
            <value>
                <fullName>5+ items</fullName>
            </value>
            <value>
                <fullName>10+ items</fullName>
            </value>
            <value>
                <fullName>15+ items</fullName>
            </value>
            <value>
                <fullName>20+ items</fullName>
            </value>
            <value>
                <fullName>25+ items</fullName>
            </value>
            <value>
                <fullName>30+ items</fullName>
            </value>
            <value>
                <fullName>35+ items</fullName>
            </value>
            <value>
                <fullName>40+ items</fullName>
            </value>
            <value>
                <fullName>45+ items</fullName>
            </value>
            <value>
                <fullName>50+ items</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>