force-app/main/default/objects/Area__c/fields/PhysicalAddress__c.field-meta.xml
<CustomField>
    <fullName>PhysicalAddress__c</fullName>
    <label>Physical Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>