force-app/main/default/objects/Area__c/fields/Pickup__c.field-meta.xml
<CustomField>
    <fullName>Pickup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pickup</label>
    <type>Checkbox</type>
</CustomField>