force-app/main/default/objects/Area__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ZipCode__c</columns>
    <columns>Delivery__c</columns>
    <columns>Pickup__c</columns>
    <columns>MinimumItems__c</columns>
    <columns>DaysOfWeek__c</columns>
    <columns>Timeframe__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>