force-app/main/default/objects/Area__c/listViews/Tacoma_Areas.listView-meta.xml
<ListView>
    <fullName>Tacoma_Areas</fullName>
    <columns>NAME</columns>
    <columns>ZipCode__c</columns>
    <columns>DaysOfWeek__c</columns>
    <columns>Timeframe__c</columns>
    <columns>Delivery__c</columns>
    <columns>Pickup__c</columns>
    <columns>MinimumItems__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>NWFB - Tacoma</value>
    </filters>
    <label>Tacoma Areas</label>
</ListView>